# Q3_25_builder_Lalit

./: README.md
Capstone /devrupt/: readme.md
Capstone /devrupt/anchor/: Anchor.toml  README.md  package-lock.json  package.json  test-deployment.sh  txtx.yml
Capstone /devrupt/anchor/programs/devrupt/: Cargo.toml
Capstone /devrupt/anchor/programs/devrupt/src/: error.rs  lib.rs
Capstone /devrupt/anchor/programs/devrupt/src/instructions/: initialize_contributor.rs  mint_sbt.rs  mod.rs  record_contribution.rs
Capstone /devrupt/anchor/programs/devrupt/src/state/: contributor_state.rs  mod.rs  reward_log.rs
Capstone /devrupt/anchor/tests/: devrupt.ts  sbt-devnet-test.ts
Capstone /devrupt/web/: README.md  package-lock.json
turbin3-assignment/: .gitignore  README.md  airdrop.ts  convert.ts  drain.ts  enroll.ts  keygen.ts  package.json  public-key.ts  transfer.ts
turbin3-assignment/programs/: Turbin3_prereq.ts
week1/nft minting/: .gitignore  README.md  nft_image.ts  nft_metadata.ts  nft_mint.ts  package.json
week2/Vault/: Anchor.toml  package.json
week2/Vault/tests/: vault.ts
week2/amm/: Anchor.toml
week2/amm/programs/amm/: Cargo.toml
week2/escrow/: Anchor.toml  package.json
week2/vault/: Anchor.toml  readme.md
week3/nft_staking/: Anchor.toml
week4/marketplace/: Anchor.toml  package-lock.json
week5/dice-satoshi/: Anchor.toml
week5/dice-satoshi/programs/dice-satoshi/: Cargo.toml
week5/dice-satoshi/programs/dice-satoshi/src/: error.rs  lib.rs
week5/dice-satoshi/programs/dice-satoshi/src/instructions/: initialize.rs  mod.rs  place_bet.rs  refund_bet.rs  resolve_bet.rs
week5/dice-satoshi/programs/dice-satoshi/src/state/: mod.rs
week5/dice-satoshi/tests/: dice-satoshi.ts
(+41 files in other folders)
