[package]
name = "devrupt"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "devrupt"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = {version="0.31.1", features=["init-if-needed"]}
anchor-spl={version="0.31.1" ,features=["metadata"]}
mpl-token-metadata = "1.10.1" # or latest version


